--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "prettier": "lint-staged",
         "start": "nodemon --inspect src/index.js",
         "complie": "node-sass --watch src/resourses/sass/ -o src/public/css/ ",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +12,11 @@
     "lint-staged": {
         "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
     },
-
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
     "author": "",
     "license": "ISC",
     "dependencies": {
